[ci] Another cleanup